# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # # On branch main # Your branch is ahead of 'origin/main' by 1 commit. #   (use "git push" to publish your local commits) # # It took 2.49 seconds to compute the branch ahead/behind values. # You can use '--no-ahead-behind' to avoid this. # # Changes to be committed: #	modified:   index.html #	modified:   style.css # # # It took 14.87 seconds to enumerate untracked files. # See 'git help status' for information on how to improve this. #

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ body {
     height: 100vh;
     background:
     linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-    url('./image/logoprincipal.png.jpg');
+url('./logo/logoprincipal.png.jpg');
 
     background-size: cover;
     background-position: center;
@@ -1214,9 +1214,6 @@ transform:scale(1.1);
 .estampa-scroll::-webkit-scrollbar-thumb:hover {
   background: linear-gradient(135deg, #FF1493, #FF69B4);
 }
-
-/* Preview responsivo do modal de estampas */
-.estampa-modal-preview img {
 
 /* Preview responsivo do modal de estampas */
 .estampa-modal-preview img {
